--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite" ] }
 serde = {version = "1.0.157", features = ["derive"]}
 serde_json = "1.0.94"
 dotenv = "0.15.0"
+rand = "0.8.5"
